# Crawler_Quest_App

./:  bbb.txt  .coverage  .coveragerc  .gitignore  Artorias.pkl  Artorias.txt  README.md  john.pkl  pyproject.toml  q.pkl  rena.pkl  requirements.md  s.pkl  sam.pkl
assets/: story.txt
character/: character_logic.py
game/: game_logic.py  kary.py
htmlcov/: _venv_lib_python3_9_site-packages__pytest___init___py.html  _venv_lib_python3_9_site-packages__pytest__argcomplete_py.html  _venv_lib_python3_9_site-packages__pytest__code___init___py.html  _venv_lib_python3_9_site-packages__pytest__code_code_py.html  _venv_lib_python3_9_site-packages__pytest__code_source_py.html  _venv_lib_python3_9_site-packages__pytest__io___init___py.html  _venv_lib_python3_9_site-packages__pytest__io_saferepr_py.html  _venv_lib_python3_9_site-packages__pytest__io_terminalwriter_py.html  _venv_lib_python3_9_site-packages__pytest__io_wcwidth_py.html  _venv_lib_python3_9_site-packages__pytest__version_py.html  _venv_lib_python3_9_site-packages__pytest_assertion___init___py.html  _venv_lib_python3_9_site-packages__pytest_assertion_rewrite_py.html  _venv_lib_python3_9_site-packages__pytest_assertion_truncate_py.html  _venv_lib_python3_9_site-packages__pytest_assertion_util_py.html  _venv_lib_python3_9_site-packages__pytest_cacheprovider_py.html  _venv_lib_python3_9_site-packages__pytest_capture_py.html  _venv_lib_python3_9_site-packages__pytest_compat_py.html  _venv_lib_python3_9_site-packages__pytest_config___init___py.html  _venv_lib_python3_9_site-packages__pytest_config_argparsing_py.html  (+103 more)
(+10 files in other folders)
