[tool.poetry]
name = "crawler_quest_app"
version = "0.1.0"
description = ""
authors = ["bjgman12 <bjgman38@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
art = "^5.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
